[gd_scene load_steps=46 format=3 uid="uid://di1ayvcttld48"]

[ext_resource type="Script" path="res://Scenes/player_character.gd" id="1_lwsv6"]
[ext_resource type="Texture2D" uid="uid://bx5e27ayxdsm3" path="res://Assets/DU-assets/Player Icons/Tan Male.png" id="2_441iy"]
[ext_resource type="Texture2D" uid="uid://bblaadw68dolm" path="res://Assets/black-color-solid-background-1920x1080.png" id="3_5cp7i"]
[ext_resource type="Script" path="res://Scenes/GUI.gd" id="3_a6g58"]
[ext_resource type="Texture2D" uid="uid://ytmrqecjwacu" path="res://Assets/ruby-red-color-solid-background-1920x1080.png" id="4_cndtv"]
[ext_resource type="Texture2D" uid="uid://ceumdf8lw4yvy" path="res://Assets/light-green-color-solid-background-1920x1080.png" id="4_o4dc7"]
[ext_resource type="Texture2D" uid="uid://cwqp8c57ri8lv" path="res://Assets/5b55347cbc59b8849f75454d77c0d828.jpg" id="5_6ufyy"]

[sub_resource type="Animation" id="Animation_bboqk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u3bxx"]
resource_name = "attack_left"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [41]
}

[sub_resource type="Animation" id="Animation_q850h"]
resource_name = "attack_right"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [34]
}

[sub_resource type="Animation" id="Animation_baktc"]
resource_name = "idle_down"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qfwiu"]
resource_name = "idle_left"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_sk2gu"]
resource_name = "idle_right"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_o0uhc"]
resource_name = "idle_up"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_fbpaf"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 8, 12, 0]
}

[sub_resource type="Animation" id="Animation_vqwb3"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 11, 15, 11]
}

[sub_resource type="Animation" id="Animation_a7l7q"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 10, 14, 10]
}

[sub_resource type="Animation" id="Animation_2lqsh"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 9, 13, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_05csp"]
_data = {
"RESET": SubResource("Animation_bboqk"),
"attack_left": SubResource("Animation_u3bxx"),
"attack_right": SubResource("Animation_q850h"),
"idle_down": SubResource("Animation_baktc"),
"idle_left": SubResource("Animation_qfwiu"),
"idle_right": SubResource("Animation_sk2gu"),
"idle_up": SubResource("Animation_o0uhc"),
"walk_down": SubResource("Animation_fbpaf"),
"walk_left": SubResource("Animation_vqwb3"),
"walk_right": SubResource("Animation_a7l7q"),
"walk_up": SubResource("Animation_2lqsh")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ch4g8"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_abrml"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ah8ju"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4f5xk"]
animation = &"attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_jk80d"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ch4g8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_abrml")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ah8ju")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_4f5xk")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tro5d"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3ms0"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o4cgu"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fjn4r"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_08j6d"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tro5d")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_i3ms0")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_o4cgu")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_fjn4r")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ifyxb"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_akcv1"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_07auw"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fgvxu"]
animation = &"walk_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_wefyf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ifyxb")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_akcv1")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_07auw")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_fgvxu")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nmg35"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u06n1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nx8y5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2howd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0xmmk"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6ot2y"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gw4wc"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_y57yn"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_jk80d")
states/Attack/position = Vector2(446, 1)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_08j6d")
states/Idle/position = Vector2(403, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_wefyf")
states/Walk/position = Vector2(551, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_nmg35"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_u06n1"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_nx8y5"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_2howd"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_0xmmk"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_6ot2y"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_gw4wc")]
graph_offset = Vector2(-42, -38)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_x323a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2lhmj"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_oq7vv"]
properties/0/path = NodePath("Sprite2D:modulate")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath("AnimationTree:parameters/Idle/blend_position")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("AnimationTree:parameters/Walk/blend_position")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("AnimationPlayer:current_animation")
properties/3/spawn = false
properties/3/sync = false
properties/4/path = NodePath(".:position")
properties/4/spawn = true
properties/4/sync = true
properties/5/path = NodePath(".:motion")
properties/5/spawn = true
properties/5/sync = true
properties/6/path = NodePath("AnimationTree:parameters/Attack/blend_position")
properties/6/spawn = true
properties/6/sync = true
properties/7/path = NodePath(".:attacking")
properties/7/spawn = true
properties/7/sync = true

[node name="Player_Character" type="CharacterBody2D" groups=["players"]]
motion_mode = 1
script = ExtResource("1_lwsv6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_05csp")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_y57yn")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_x323a")
parameters/Attack/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_441iy")
hframes = 9
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_2lhmj")
disabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_oq7vv")

[node name="Timers" type="Node" parent="."]

[node name="Attack Animation CD" type="Timer" parent="Timers"]
one_shot = true

[node name="GUI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3_a6g58")

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 1132.0
offset_bottom = 628.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
offset_right = 1112.0
offset_bottom = 80.0

[node name="Panel" type="Panel" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 20)
offset_right = 300.0
offset_bottom = 80.0

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CenterContainer" type="CenterContainer" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer"]
offset_left = 5.0
offset_top = 8.0
offset_right = 295.0
offset_bottom = 72.0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer/CenterContainer"]
offset_left = 20.0
offset_right = 270.0
offset_bottom = 64.0

[node name="Health" type="TextureProgressBar" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 30)
offset_right = 250.0
offset_bottom = 30.0
nine_patch_stretch = true
texture_under = ExtResource("4_cndtv")
texture_progress = ExtResource("4_o4dc7")

[node name="Ki" type="TextureProgressBar" parent="GUI/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
offset_top = 34.0
offset_right = 250.0
offset_bottom = 64.0
nine_patch_stretch = true
texture_under = ExtResource("3_5cp7i")
texture_progress = ExtResource("5_6ufyy")

[node name="CenterContainer" type="CenterContainer" parent="GUI/MarginContainer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 1132.0
offset_bottom = 628.0

[node name="TabContainer" type="TabContainer" parent="GUI/MarginContainer/CenterContainer"]
visible = false
offset_left = 556.0
offset_top = 288.0
offset_right = 556.0
offset_bottom = 319.0

[node name="Attributes" type="Panel" parent="GUI/MarginContainer/CenterContainer/TabContainer"]
custom_minimum_size = Vector2(600, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 590.0
offset_bottom = 390.0

[node name="Attribute_list" type="VBoxContainer" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
offset_right = 100.0
offset_bottom = 380.0

[node name="Vitality" type="Label" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Attribute_list"]
custom_minimum_size = Vector2(0, 30)
offset_right = 100.0
offset_bottom = 30.0
text = "Vitality"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spirit" type="Label" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Attribute_list"]
custom_minimum_size = Vector2(0, 30)
offset_top = 34.0
offset_right = 100.0
offset_bottom = 64.0
text = "Spirit
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Strength" type="Label" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Attribute_list"]
custom_minimum_size = Vector2(0, 30)
offset_top = 68.0
offset_right = 100.0
offset_bottom = 98.0
text = "Strength
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Agility" type="Label" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Attribute_list"]
custom_minimum_size = Vector2(0, 30)
offset_top = 102.0
offset_right = 100.0
offset_bottom = 132.0
text = "Agility"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Durability" type="Label" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Attribute_list"]
custom_minimum_size = Vector2(0, 30)
offset_top = 136.0
offset_right = 100.0
offset_bottom = 166.0
text = "Durability"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Force" type="Label" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Attribute_list"]
custom_minimum_size = Vector2(0, 30)
offset_top = 170.0
offset_right = 100.0
offset_bottom = 200.0
text = "Force"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade Buttons" type="VBoxContainer" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
offset_left = 104.0
offset_right = 204.0
offset_bottom = 380.0

[node name="Vitality_Button" type="Button" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Upgrade Buttons"]
custom_minimum_size = Vector2(0, 30)
offset_right = 100.0
offset_bottom = 30.0

[node name="Spirit_Button" type="Button" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Upgrade Buttons"]
custom_minimum_size = Vector2(0, 30)
offset_top = 34.0
offset_right = 100.0
offset_bottom = 65.0
text = "
"

[node name="Strength_Button" type="Button" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Upgrade Buttons"]
custom_minimum_size = Vector2(0, 30)
offset_top = 69.0
offset_right = 100.0
offset_bottom = 100.0
text = "
"

[node name="Agility_Button" type="Button" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Upgrade Buttons"]
custom_minimum_size = Vector2(0, 30)
offset_top = 104.0
offset_right = 100.0
offset_bottom = 134.0

[node name="Durability_Button" type="Button" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Upgrade Buttons"]
custom_minimum_size = Vector2(0, 30)
offset_top = 138.0
offset_right = 100.0
offset_bottom = 168.0

[node name="Force_Button" type="Button" parent="GUI/MarginContainer/CenterContainer/TabContainer/Attributes/MarginContainer/HBoxContainer/Upgrade Buttons"]
custom_minimum_size = Vector2(0, 30)
offset_top = 172.0
offset_right = 100.0
offset_bottom = 202.0

[node name="Skills" type="Panel" parent="GUI/MarginContainer/CenterContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(600, 400)

[node name="Transformations" type="Panel" parent="GUI/MarginContainer/CenterContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(600, 400)

[node name="Ki Attacks" type="Panel" parent="GUI/MarginContainer/CenterContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(600, 400)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timers/Attack Animation CD" to="." method="_on_attack_animation_cd_timeout"]
